--- a/src/i18n/en_US.json
+++ b/src/i18n/en_US.json
@@ -1,3 +1,6 @@
 {
-    "name": "SiYuan"
+    "name": "SiYuan",
+    "hello": {
+        "makesure": "Before using this template, please read the <a href=\"https://github.com/siyuan-note/plugin-sample\">offical sample</a>, make sure that you've known about the pipeline for plugin developing."
+    }
 }
