--- a/src/i18n/zh_CN.json
+++ b/src/i18n/zh_CN.json
@@ -1,3 +1,6 @@
 {
-    "name": "思源"
+    "name": "思源",
+    "hello": {
+        "makesure": "使用这个模板之前，请阅读<a href=\"https://github.com/siyuan-note/plugin-sample\">官方教程</a>, 确保自己已经理解了插件的基本开发流程。"
+    }
 }
