--- a/src/i18n/en_US.json
+++ b/src/i18n/en_US.json
@@ -5,6 +5,9 @@
     "byeMenu": "Bye, Menu!",
     "helloPlugin": "Hello, Plugin!",
     "byePlugin": "Bye, Plugin!",
+    "showDialog": "Show dialog",
+    "removedData": "Data deleted",
+    "confirmRemove": "Confirm to delete the data in ${name}?",
     "name": "SiYuan",
     "hello": {
         "makesure": "Before using this template, please read the <a href=\"https://github.com/siyuan-note/plugin-sample\">offical sample</a>, make sure that you've known about the pipeline for plugin developing."
