--- a/src/i18n/en_US.json
+++ b/src/i18n/en_US.json
@@ -9,6 +9,7 @@
     "removedData": "Data deleted",
     "confirmRemove": "Confirm to delete the data in ${name}?",
     "insertEmoji": "Insert Emoji",
+    "getTab": "Print out all opened custom tabs in the debugger",
     "name": "SiYuan",
     "hello": {
         "makesure": "Before using this template, please read the <a href=\"https://github.com/siyuan-note/plugin-sample\">offical sample</a>, make sure that you've known about the pipeline for plugin developing."
