--- a/src/i18n/zh_CN.json
+++ b/src/i18n/zh_CN.json
@@ -9,6 +9,7 @@
     "removedData": "数据已删除",
     "confirmRemove": "确认删除 ${name} 中的数据？",
     "insertEmoji": "插入表情",
+    "getTab": "在日志中打印出已打开的所有自定义页签",
     "name": "思源",
     "hello": {
         "makesure": "使用这个模板之前，请阅读<a href=\"https://github.com/siyuan-note/plugin-sample\">官方教程</a>, 确保自己已经理解了插件的基本开发流程。"
