--- a/src/i18n/zh_CN.json
+++ b/src/i18n/zh_CN.json
@@ -9,6 +9,7 @@
     "removedData": "数据已删除",
     "confirmRemove": "确认删除 ${name} 中的数据？",
     "insertEmoji": "插入表情",
+    "removeSpace": "移除空格",
     "getTab": "在日志中打印出已打开的所有自定义页签",
     "name": "思源",
     "hello": {
