--- a/src/i18n/en_US.json
+++ b/src/i18n/en_US.json
@@ -9,6 +9,7 @@
     "removedData": "Data deleted",
     "confirmRemove": "Confirm to delete the data in ${name}?",
     "insertEmoji": "Insert Emoji",
+    "removeSpace": "Remove Space",
     "getTab": "Print out all opened custom tabs in the debugger",
     "name": "SiYuan",
     "hello": {
